Bug 25333. Implement nsIScriptGlobalObjectOwner so we can report compilation errors. r=scc